unit tests added. integration tests are done.